--- a/ETicaret.Net8/appsettings.json
+++ b/ETicaret.Net8/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionStrings": "Server:LAPTOP-LESH9FO5;Database=ECommerce; Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
