--- a/ETicaret.Net8/appsettings.json
+++ b/ETicaret.Net8/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionStrings": "Server:LAPTOP-LESH9FO5;Database=ECommerce; Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnectionStrings": "Server=LAPTOP-LESH9FO5;Database=ECommerce; Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
