--- a/ETicaret.Net8/ETicaret.Net8.csproj
+++ b/ETicaret.Net8/ETicaret.Net8.csproj
@@ -23,13 +23,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ETicaret.Data\ETicaret.Data.csproj" />
+    <ProjectReference Include="..\ETicaret.Model\ETicaret.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
